--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -145,7 +145,7 @@
             <%= item.title %>
           </h3>
           <div class='item-price'>
-            <span><%= item.selling_price %>円<br><%= '配送料負担' %></span>
+            <span><%= item.selling_price %>円<br><%= item.shipping_fee.name %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
